# Parking_Service

./: .gitignore  Dockerfile  LICENCE  Procfile  README.md  README_UA.md  docker-compose.yml  pyproject.toml  requirements.txt
Parking_Service/parking_system/: Dockerfile  docker-compose.yml  example.env  manage.py
Parking_Service/parking_system/parking/: __init__.py  admin.py  apps.py  forms.py  models.py  serializers.py  signals.py  urls.py  v.py  views.py  vision.py
Parking_Service/parking_system/parking/migrations/: 0001_initial.py  0002_parkingimage.py  0003_parkingrate.py  0003_parkingrate_vehicle_vehicle_type.py  0004_vehicle_vehicle_type.py
Parking_Service/parking_system/parking_system/: asgi.py  settings.py  urls.py  wsgi.py
Parking_Service/parking_system/static/css/: Entry_styles.css  about_us.css  base.css
Parking_Service/parking_system/staticfiles/css/: Entry_styles.css  about_us.css  base.css
Parking_Service/parking_system/templates/: about_us.html  add_transaction.html  add_vehicle.html  base.html  capture_image.html  edit_profile.html  end_parking_session_image.html  find_nomer.html  home.html  login.html  logout.html  no_parking_spots.html  parking_sessions.html  parking_status.html  profile.html  register.html  start_parking_session_image.html  transaction_history.html  upload_and_find_vehicle.html  upload_image.html  vehicle_entry.html  vehicle_exit.html  vehicle_list.html
models/: model_res.py  model_yolo_res.py  padd_res.py  train_yolo.py
nginx/: nginx.conf
runs/detect/YOLOv8s_license_plate/: args.yaml  results.csv
(+1 files in other folders)
