[tool.poetry]
name = "parking_service"
version = "0.1.0"
description = ""
authors = ["FiveContinents_Coders"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
asgiref = "3.8.1"
django = "5.1"
django-environ = "0.11.2"
djangorestframework = "3.15.2"
gunicorn = "23.0.0"
numpy = "^1.26.0"
packaging = "24.1"
pillow = "10.4.0"
psycopg2-binary = "2.9.9"
pytesseract = "0.3.10"
python-dotenv = "1.0.1"
sqlparse = "0.5.1"
tzdata = "2024.1"
ultralytics = "8.2.78"
paddlepaddle = "2.6.1"
paddleocr = "2.8.1"
opencv-python-headless = "4.10.0.84"
fuzzywuzzy = "^0.18.0"
python-levenshtein = "^0.25.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

